# RuView

./: CHANGELOG.md  CLAUDE.md  README.md
.github/workflows/: ci.yml  pip-release.yml  sensing-server-docker.yml
archive/v1/src/hardware/: csi_extractor.py
archive/v1/tests/unit/: test_esp32_binary_parser.py
benchmarks/wiflow-std/: RESULTS.md  static_ptq_bench.py
benchmarks/wiflow-std/remote/measb/: train_measb.py
benchmarks/wiflow-std/results/: edge_optimization.json
docs/: WITNESS-LOG-110.md  user-guide.md
docs/adr/: ADR-152-wifi-pose-sota-2026-intake.md  ADR-250-adaptive-gamma-entrainment.md  ADR-251-gamma-clinical-dashboard.md
docs/integrations/: home-assistant.md
docs/research/ruview-beyond-sota/: GAMMA-GIST.md
firmware/esp32-csi-node/main/: c6_sync_espnow.c  csi_collector.c
firmware/esp32-gamma-stim/: README.md
firmware/esp32-gamma-stim/main/: Kconfig.projbuild  main.c  stim_core.h
python/ruview-meta/: ~$README.md
v2/: Cargo.toml
v2/crates/ruview-gamma/: README.md
v2/crates/ruview-gamma-clinic/: Cargo.toml
v2/crates/ruview-gamma-clinic/src/: dashboard.html  lib.rs  main.rs  server.rs  store.rs
v2/crates/ruview-gamma/benches/: optimizer_bench.rs
v2/crates/ruview-gamma/src/: acceptance.rs  lib.rs  optimizer.rs  program.rs  ruflo.rs
v2/crates/wifi-densepose-calibration/src/: anchor.rs  bank.rs  enrollment.rs  extract.rs  lib.rs  (+1 more)
v2/crates/wifi-densepose-mat/: Cargo.toml
v2/crates/wifi-densepose-sensing-server/: Cargo.toml
v2/crates/wifi-densepose-worldgraph/: Cargo.toml
v2/crates/wifi-densepose-worldmodel/: Cargo.toml
(+8 files in other folders)
